Agregar botón de WhatsApp

--- a/index.html
+++ b/index.html
@@ -892,6 +892,11 @@
 
 </main>
 
+<a href="https://wa.me/526145154943?text=Hola%20Mixen,%20necesito%20información." class="whatsapp"
+  target="_blank">
+  <i class="fab fa-whatsapp whatsapp-icon"></i>
+</a>
+
   <!-- Load JS here for greater good =============================-->
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
