Agregar botón de WhatsApp

--- a/index.html
+++ b/index.html
@@ -892,9 +892,9 @@
 
 </main>
 
-<a href="https://wa.me/526145154943?text=Hola%20Mixen,%20necesito%20información." class="whatsapp"
+<a href="https://wa.me/526145154943?text=Hola%20Mixen,%20necesito%20información." class="btn-whatsapp"
   target="_blank">
-  <i class="fab fa-whatsapp whatsapp-icon"></i>
+  <i class="bi bi-whatsapp"></i>
 </a>
 
   <!-- Load JS here for greater good =============================-->
